Fixed spacing, css, and scrollbar

--- a/frontend/src/app/shared/community-agreement/community-agreement.widget.css
+++ b/frontend/src/app/shared/community-agreement/community-agreement.widget.css
@@ -1,5 +1,11 @@
 .community-agreement-dialog {
-  max-height: 70vh; 
+  max-width: 100%;
+  max-height: 90vh; 
   overflow: auto; 
   scroll-behavior: auto; 
+}
+@media (prefers-color-scheme: dark) {
+  .community-agreement-dialog {
+    color: white;
+  }
 }
